--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/cs_CZ/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/cs_CZ/openmediavault-iscsitarget.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Pavel Borecki <pavel.borecki@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-12-11 21:27+0000\n"
+"PO-Revision-Date: 2015-02-05 07:48+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "Add LUN"
-msgstr "Přidat LUN"
+msgstr "Přidat iSCSI logickou jednotku (identifikátor LUN)"
 
 msgid "Add target"
 msgstr "Přidat cíl"
@@ -28,16 +28,16 @@ msgid "Add user"
 msgstr "Přidat uživatele"
 
 msgid "Alias"
-msgstr "Alternativní název"
+msgstr "Alternativní název/adresa"
 
 msgid "Assign a unique identifier to the iSCSI volume optionally."
 msgstr "iSCSI svazku volitelně přiřadit jedinečný identifikátor."
 
 msgid "Assign a unique serial number to the iSCSI volume optionally."
-msgstr ""
+msgstr "iSCSI svazku volitelně přiřadit jedinečné sériové číslo."
 
 msgid "Authentication"
-msgstr "Ověření"
+msgstr "Ověřování"
 
 msgid "Block IO"
 msgstr "Vstup/Výstup blokového zařízení"
@@ -48,22 +48,22 @@ msgstr "Komentář"
 msgid ""
 "Controls the maximum number of data transfers the target may request at "
 "once."
-msgstr ""
+msgstr "Určuje nejvyšší umožněný počet datových přenosů, který může být cílem požadován naráz."
 
 msgid "Data PDU in order"
 msgstr "Data v pořadí PDU"
 
 msgid "Data digest"
-msgstr ""
+msgstr "Otisk dat"
 
 msgid "Data sequence in order"
-msgstr ""
+msgstr "Posloupnost dat v pořadí"
 
 msgid "Device"
 msgstr "Zařízení"
 
 msgid "Discovery authentication"
-msgstr ""
+msgstr "Ověřování při propagaci služby"
 
 msgid "Edit LUN"
 msgstr "Upravit LUN"
@@ -78,16 +78,16 @@ msgid "Enable"
 msgstr "Povolit"
 
 msgid "Error recovery level"
-msgstr ""
+msgstr "Stupeň obnovy z chyby"
 
 msgid "Extra options"
 msgstr "Rozšířené možnosti"
 
 msgid "File IO"
-msgstr ""
+msgstr "Souborový vst./výst."
 
 msgid "First burst length"
-msgstr ""
+msgstr "Délka první dávky"
 
 msgid "General"
 msgstr "Obecné"
@@ -96,7 +96,7 @@ msgid "General settings"
 msgstr "Obecná nastavení"
 
 msgid "Header digest"
-msgstr ""
+msgstr "Otisk hlavičky"
 
 msgid "IO threads"
 msgstr "vstup./výst. vláken"
@@ -105,7 +105,7 @@ msgid "IQN"
 msgstr ""
 
 msgid "Id"
-msgstr ""
+msgstr "Identifikátor"
 
 msgid "Identifier"
 msgstr "Identifikátor"
@@ -114,35 +114,35 @@ msgid ""
 "If a non-zero 'NOP interval' is used to periodically 'ping' the initiator "
 "during phases of inactivity (i.e. no data transfers), the initiator must "
 "respond within N seconds, otherwise the connection will be closed."
-msgstr ""
+msgstr "Jestliže je nastaven časový úsek mezi povely NOP, pak jsou tyto použity jako pravidelné kontroly v obdobích, kdy nejsou přenášena data. Iniciátor musí odpovědět v nastaveném limitu, jinak bude spojení ukončeno."
 
 msgid ""
 "If enabled, the initiator has to wait for the target to solicit SCSI data "
 "before sending it. Disabling it allows the initiator to send a burst of N "
 "bytes unsolicited right after and/or together with the command. Thus "
 "disabling it may improve performance."
-msgstr ""
+msgstr "Když je povoleno, iniciátor musí čekat, než cíl získá SCSI data, než je odešle. Zakázání povolí iniciátoru poslat dávku N bajtů nevyžádaně právě po a/nebo společně s příkazem. Proto zakázání může vylepšit výkon."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's data segment will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "Při nastavení na \"CRC32C\" a příslušně nastaveném iniciátoru, bude celistvost datového segmentu PDU chráněna kontrolním součetem CRC32C."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's header segments will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "Je-li nastaveno na CRC32C a iniciátor je příslušně nastaven, bude neporušenost hlavičkových segmentů PDU ověřována pomocí kontrolního součtu algoritmem CRC32C."
 
 msgid ""
 "If value is non-zero, the initiator will be 'ping'ed during phases of "
 "inactivity (i.e. no data transfers) every N seconds to verify the connection"
 " is still alive."
-msgstr ""
+msgstr "Při nenulové hodnotě, bude u iniciátoru v obdobích neaktivity (tzn. neprobíhajících přenosech dat) ověřováno, zda je stále k dispozici (pomocí dotazování nástrojem ping a to každých N sekund)."
 
 msgid "Immediate data"
-msgstr ""
+msgstr "Okamžitá data"
 
 msgid "Incoming"
 msgstr "Příchozí"
@@ -154,34 +154,34 @@ msgid "LUN"
 msgstr ""
 
 msgid "Max. burst length"
-msgstr ""
+msgstr "Nejdelší přijatelná dávka"
 
 msgid "Max. connections"
-msgstr ""
+msgstr "Nejvýše spojení"
 
 msgid "Max. outstanding R2T"
-msgstr ""
+msgstr "Nejvýše zbývajících datových jednotek protokolu iSCSI (PDU), připravených k přenosu (R2T)"
 
 msgid "Max. receive data segment length"
-msgstr ""
+msgstr "Nejdelší přijatelný úsek dat"
 
 msgid "Max. sessions"
-msgstr ""
+msgstr "Nejvýše relací"
 
 msgid "Max. transmit data segment length"
-msgstr ""
+msgstr "Největší velikost přenášeného úseku dat"
 
 msgid "NOP interval"
-msgstr ""
+msgstr "Rozmezí povelu NOP"
 
 msgid "NOP timeout"
-msgstr ""
+msgstr "Limit časové prodlevy povelu NOP"
 
 msgid "None"
 msgstr "Žádné"
 
 msgid "Only one outgoing user per target is supported."
-msgstr ""
+msgstr "Pro jeden cíl je možné použít jen jediného odchozího uživatele."
 
 msgid "Outgoing"
 msgstr "Odchozí"
@@ -196,35 +196,35 @@ msgid "R/W mode"
 msgstr "Režim čtení i zápisu"
 
 msgid "Read-only"
-msgstr "Pouze ke čtení"
+msgstr "Pouze pro čtení"
 
 msgid "SCSI Id."
-msgstr ""
+msgstr "SCSI identifikátor"
 
 msgid "SCSI serial no."
-msgstr ""
+msgstr "SCSI sériové číslo"
 
 msgid "Select an device ..."
-msgstr "Zvolte zařízení..."
+msgstr "Zvolte zařízení ..."
 
 msgid ""
 "Sets the amount of unsolicited data the initiator may transmit in the first "
 "burst of a transfer either with and/or right after the command."
-msgstr ""
+msgstr "Nastaví množství nevyžádaných dat, které může iniciátor poslat v první přenosové dávce buď s a nebo hned po příkazu."
 
 msgid ""
 "Sets the maximum amount of either unsolicited or solicited data the "
 "initiator may send in a single burst."
-msgstr ""
+msgstr "Nastaví, kolik nejvýše vyžádaných či nevyžádaných dat může iniciátor poslat v jedné dávce."
 
 msgid "Sets the maximum data segment length that can be received."
-msgstr ""
+msgstr "Nastaví, jaké nejdelší datové segmenty budou přijímány."
 
 msgid "Sets the maximum data segment length that can be sent."
-msgstr ""
+msgstr "Nastaví, jaké nejdelší datové segmenty bude možné posílat."
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavení"
 
 msgid "Targets"
 msgstr "Cíle"
@@ -233,18 +233,18 @@ msgid "The identifier of the target."
 msgstr "Identifikátor cíle."
 
 msgid "The maximum number of sessions for this target."
-msgstr ""
+msgstr "Nejvyšší umožněný počet relací pro tento cíl."
 
 msgid ""
 "The number of commands an initiator may send and that will be buffered by "
 "the target."
-msgstr ""
+msgstr "Počet příkazů, které iniciátor může posílat a které budou cílem uloženy v jeho vyrovnávací paměti."
 
 msgid "The number of connections within a session."
 msgstr "Počet spojení v rámci sezení."
 
 msgid "The number of threads to perform block I/O to the device."
-msgstr ""
+msgstr "Počet vláken pro blokový vstup/výstup na zařízení."
 
 msgid "The optional alias of the target."
 msgstr "Volitelný alternativní název cíle."
@@ -252,7 +252,7 @@ msgstr "Volitelný alternativní název cíle."
 msgid ""
 "This allows the initiator to append unsolicited data to a command. To "
 "achieve better performance, this should be enabled."
-msgstr ""
+msgstr "Toto povolí iniciátoru připojit k příkazu nevyžádaná data. Pro dosažení lepšího výkonu by toto mělo být zapnuté."
 
 msgid "Transfer mode"
 msgstr "Přenosový režim"
@@ -261,7 +261,7 @@ msgid "Type"
 msgstr "Typ"
 
 msgid "Username"
-msgstr "Přihlašovací jména"
+msgstr "Přihlašovací jméno"
 
 msgid "Users"
 msgstr "Uživatelé"
@@ -273,4 +273,4 @@ msgid "Write-through"
 msgstr "Průběžný zápis"
 
 msgid "iSCSI Target"
-msgstr "Cíl iSCSI"
+msgstr "iSCSI cíl"
