--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/cs_CZ/openmediavault-netatalk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-06 16:30+0200\n"
-"PO-Revision-Date: 2014-12-22 21:57+0000\n"
+"PO-Revision-Date: 2014-12-31 10:40+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -40,7 +40,7 @@ msgid "Apple Filing"
 msgstr ""
 
 msgid "Case folding"
-msgstr ""
+msgstr "Považovat malá a velká písmena za tatáž"
 
 msgid "Client sees lowercase, server sees uppercase"
 msgstr "Klient vidí malá písmena, server velká"
@@ -79,7 +79,7 @@ msgid "Guest login"
 msgstr "Přihlášení hosta"
 
 msgid "Guest permissions"
-msgstr "Práva hosta"
+msgstr "Přístupová práva hosta"
 
 msgid "Guests only have read access by default."
 msgstr "Ve výchozím nastavení mohou hosté pouze číst."
@@ -103,7 +103,7 @@ msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr "Omezit hlášenou velikost svazku na zadanou hodnotu v MiB a tím zabránit TM zabrat pro zálohování celou kapacitu úložiště. Pro vyřazení zadejte 0."
+msgstr "Omezit hlášenou velikost svazku na zadanou hodnotu v MiB a tím zabránit aplikaci Time Machine zabrat pro zálohování celou kapacitu úložiště. Pokud nechcete omezovat, zadejte 0 (nula)."
 
 msgid "Lowercases names in both directions"
 msgstr "Obousměrný převod na názvy malými písmeny"
@@ -169,7 +169,7 @@ msgstr "Použít tečky"
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
 ".Parent and anything that starts with .Apple."
-msgstr ""
+msgstr "Pokud je tato volba nastavena, některé názvy se stanou vyhrazenými a nebude je možné použít. Konkrétně .Parent a cokoli, začínají na .Apple."
 
 msgid "n/a"
 msgstr ""
