--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-02-23 07:30+0000\n"
+"PO-Revision-Date: 2015-03-10 07:34+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -380,7 +380,7 @@ msgid "Asynchronous I/O"
 msgstr "Aszinkron I/O"
 
 msgid "At reboot"
-msgstr ""
+msgstr "Újraindításnál"
 
 msgid "Attribute name"
 msgstr "Attribútum név"
@@ -556,12 +556,12 @@ msgstr "Mégsem"
 msgid ""
 "Cannot unlink the shared folder content because another shared folder also "
 "refers to it"
-msgstr ""
+msgstr "Nem lehet megszüntetni a megosztott mappa tartalmát, mert egy másik megosztott mappa is hivatkozik rá"
 
 msgid ""
 "Cannot unlink the shared folder content because another shared folder is "
 "referencing a subdirectory"
-msgstr ""
+msgstr "Nem lehet megszüntetni a megosztott mappa tartalmát, mert egy másik megosztott mappa hivatkozik egy alkönyvtárra."
 
 msgid "Canton and Enderbury Islands"
 msgstr "Canton and Enderbury Islands"
@@ -579,7 +579,7 @@ msgid "Central African Republic"
 msgstr "Közép-afrikai Köztársaság"
 
 msgid "Certain date"
-msgstr ""
+msgstr "Bizonyos dátum"
 
 msgid "Certificate"
 msgstr "Tanúsítvány"
@@ -773,7 +773,7 @@ msgid "Daemon"
 msgstr "Démon"
 
 msgid "Daily"
-msgstr ""
+msgstr "Napi"
 
 msgid "Dashboard"
 msgstr "Műszerfal"
@@ -1202,7 +1202,7 @@ msgid "Everyone: read/write"
 msgstr "Mindenki: olvasás/írás"
 
 msgid "Exactly"
-msgstr ""
+msgstr "Pontosan"
 
 msgid "Execute command"
 msgstr "Parancs végrehajtása"
@@ -3586,7 +3586,7 @@ msgid "Time interval"
 msgstr "Idő intervallum"
 
 msgid "Time of execution"
-msgstr ""
+msgstr "Végrehajtás időpontja"
 
 msgid "Time server"
 msgstr "Idő szerver"
