--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (1.3) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Mar 2015 22:09:27 +0100
+
 openmediavault-clamav (1.2) stable; urgency=low
 
   * Update locales.
