--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ko_KR/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ko_KR/openmediavault-clamav.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
-# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014-2015
+# Sungjin Kang <potopro@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-30 02:09+0100\n"
-"PO-Revision-Date: 2014-11-30 01:10+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-02-08 10:00+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,13 +29,13 @@ msgstr "알고리즘적 감지"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr ""
+msgstr "(어떤 제품의 경우) 출력 명령이 관리자에게 이메일로 전송됩니다."
 
 msgid "Antivirus"
 msgstr "안티바이러스"
 
 msgid "Be verbose."
-msgstr ""
+msgstr "상세히"
 
 msgid "Comment"
 msgstr "설명"
@@ -46,16 +47,16 @@ msgid "Date & Time"
 msgstr "날짜 및 시간"
 
 msgid "Day of month"
-msgstr ""
+msgstr "달의 요일"
 
 msgid "Day of week"
-msgstr ""
+msgstr "주의 요일"
 
 msgid "Detect PUA"
 msgstr "PUA 검색"
 
 msgid "Detect broken executables"
-msgstr ""
+msgstr "실행 파일의 손상을 검사"
 
 msgid "Edit job"
 msgstr "작업 편집"
@@ -70,7 +71,7 @@ msgid "Enable archive scanning."
 msgstr "아카이브 검색 활성화"
 
 msgid "Enable on-access virus scanning"
-msgstr ""
+msgstr "접근 기반 바이러스 탐지 활성화"
 
 msgid "Enable scanning of ELF files."
 msgstr "ELF파일 검색 활성화"
@@ -87,7 +88,7 @@ msgid "Enable the algorithmic detection."
 msgstr "알고리즘 검색 활성화"
 
 msgid "Enable the detection of broken executables (both PE and ELF)."
-msgstr ""
+msgstr "실행 파일의 손상 감지를 활성화 (PE, ELF 모두)"
 
 msgid "Enable the detection of possibly unwanted applications."
 msgstr "원하지 않을 수 있는 응용 프로그램 탐색 활성화"
@@ -111,16 +112,16 @@ msgid "Extra options"
 msgstr "추가 옵션"
 
 msgid "Follow directory symlinks"
-msgstr ""
+msgstr "디렉터리에 대한 심볼릭 링크를 추적"
 
 msgid "Follow directory symlinks."
-msgstr ""
+msgstr "디렉터리에 대한 심볼릭 링크를 추저"
 
 msgid "Follow file symlinks"
-msgstr ""
+msgstr "파일에 대한 심볼릭 링크를 추적"
 
 msgid "Follow regular file symlinks."
-msgstr ""
+msgstr "일반 파일에 대한 심볼릭 링크를 추적"
 
 msgid "General settings"
 msgstr "일반 설정"
@@ -135,10 +136,10 @@ msgid "Jobs"
 msgstr "작업"
 
 msgid "Log clean files"
-msgstr ""
+msgstr "정리된 파일들을 기록합니다."
 
 msgid "Log clean files. This drastically increases the log size."
-msgstr ""
+msgstr "정리된 파일들을 기록합니다. 이는 기록의 크기를 크게 증가시킬 수도 있습니다."
 
 msgid "Message"
 msgstr "메시지"
@@ -147,7 +148,7 @@ msgid "Minute"
 msgstr "분"
 
 msgid "Monitor the shared folder and scan new or modified files."
-msgstr ""
+msgstr "공유된 폴더를 감시하고, 새로 생기거나 수정된 파일들을 검사합니다."
 
 msgid "Month"
 msgstr "달"
@@ -156,18 +157,18 @@ msgid "Multiscan"
 msgstr "다중 검색"
 
 msgid "Number of database update checks per day. Set to 0 to disable."
-msgstr ""
+msgstr "요일당 데이터베이스 갱신을 검사할 횟수. 0은 비활성화."
 
 msgid "On-access"
-msgstr ""
+msgstr "접근 기반"
 
 msgid "Perform a deeper analysis of executable files."
-msgstr ""
+msgstr "실행 파일들을 자세히 분석합니다."
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/clamd.conf' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "자세한 내용은 <a href='http://linux.die.net/man/5/clamd.conf' target='_blank'>매뉴얼 페이지</a>를 참고하세요."
 
 msgid "Quarantine"
 msgstr "격리"
@@ -194,7 +195,7 @@ msgid "Scan archives"
 msgstr "아카이브 검색"
 
 msgid "Scan the directory contents in parallel using available threads."
-msgstr ""
+msgstr "가용 스레드를 사용하여 병렬적으로 디렉터리 내용들을 검사합니다."
 
 msgid "Send command output via email"
 msgstr "이메일로 명령 결과 전송"
@@ -215,10 +216,10 @@ msgid "The location which is used as quarantine."
 msgstr "격리될 위치"
 
 msgid "The option, how to handle infected files."
-msgstr ""
+msgstr "어떻게 감염된 파일들을 처리할 것인지를 선택하는 옵션입니다."
 
 msgid "Verbose"
-msgstr ""
+msgstr "상세히"
 
 msgid "n/a"
 msgstr "해당 없음"
