--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Alexander Savchenko, 2012,2014
 # Alexander Savchenko <>, 2012
 # Alexander Savchenko, 2014
 # mictian <ffrants@gmail.com>, 2012
@@ -12,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-11-30 02:09+0100\n"
-"PO-Revision-Date: 2014-11-30 01:10+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-03-04 20:15+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -131,7 +132,7 @@ msgid "Hour"
 msgstr "Час"
 
 msgid "Infected files"
-msgstr "Зараженные фалы"
+msgstr "Зараженные файлы"
 
 msgid "Jobs"
 msgstr "Задания"
@@ -214,10 +215,10 @@ msgid "The location of the files to scan."
 msgstr "Расположение файлов для сканирования."
 
 msgid "The location which is used as quarantine."
-msgstr ""
+msgstr "Расположение которое будет использоваться в качестве карантина."
 
 msgid "The option, how to handle infected files."
-msgstr ""
+msgstr "Опции , как обращаться с зараженными файлами."
 
 msgid "Verbose"
 msgstr "Отладка"
