--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (1.2) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Mar 2015 22:11:50 +0100
+
 openmediavault-forkeddaapd (1.1) stable; urgency=low
 
   * Update locales.
