--- a/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/cs_CZ/openmediavault-forkeddaapd.po
+++ b/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/cs_CZ/openmediavault-forkeddaapd.po
@@ -3,13 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Jan Štourač <wormsik666@gmail.com>, 2015
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2012-03-17 01:49+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-03-01 13:55+0000\n"
+"Last-Translator: Jan Štourač <wormsik666@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,40 +20,40 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "A password is required to access the library."
-msgstr ""
+msgstr "Pro přístup do této knihovny je vyžadováno heslo."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Ověřování"
 
 msgid "Enable"
-msgstr ""
+msgstr "Zapnout"
 
 msgid "General settings"
-msgstr ""
+msgstr "Obecná nastavení"
 
 msgid "Library name"
-msgstr ""
+msgstr "Název knihovny"
 
 msgid "Password"
-msgstr ""
+msgstr "Heslo"
 
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 msgid "Port to listen on."
-msgstr ""
+msgstr "Port, na kterém očekávat spojení."
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavení"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Sdílená složka"
 
 msgid "The location of the media files to share."
-msgstr ""
+msgstr "Umístění souborů s médii ke sdílení."
 
 msgid "The name of the library as displayed by the clients."
-msgstr ""
+msgstr "Název knihovny, jak bude zobrazován klientům."
 
 msgid "iTunes/DAAP"
-msgstr ""
+msgstr "iTunes/DAAP"
