--- a/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/ko_KR/openmediavault-forkeddaapd.po
+++ b/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/ko_KR/openmediavault-forkeddaapd.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-11-02 10:03+0000\n"
-"Last-Translator: Chang-Eon Byeon <ksna0827@gmail.com>\n"
+"PO-Revision-Date: 2015-02-08 10:00+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +41,7 @@ msgid "Port"
 msgstr "포트"
 
 msgid "Port to listen on."
-msgstr ""
+msgstr "청취를 위한 포트"
 
 msgid "Settings"
 msgstr "설정"
