--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-iscsitarget (1.3) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Mar 2015 22:12:43 +0100
+
 openmediavault-iscsitarget (1.2) stable; urgency=low
 
   * Update locales.
