--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/ko_KR/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/ko_KR/openmediavault-iscsitarget.po
@@ -4,13 +4,13 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
-# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-11-09 13:31+0000\n"
+"PO-Revision-Date: 2015-02-08 11:48+0000\n"
 "Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -49,16 +49,16 @@ msgstr "설명"
 msgid ""
 "Controls the maximum number of data transfers the target may request at "
 "once."
-msgstr ""
+msgstr "대상이 한번에 요청할 수도 있는 데이터 전송의 최대 개수를 설정합니다. "
 
 msgid "Data PDU in order"
-msgstr ""
+msgstr "데이터 PDU를 정렬"
 
 msgid "Data digest"
 msgstr "데이터 다이제스트"
 
 msgid "Data sequence in order"
-msgstr ""
+msgstr "데이터 시퀀스를 정렬"
 
 msgid "Device"
 msgstr "장치"
@@ -70,7 +70,7 @@ msgid "Edit LUN"
 msgstr "LUN 편집"
 
 msgid "Edit target"
-msgstr "대사 편집"
+msgstr "대상 편집"
 
 msgid "Edit user"
 msgstr "사용자 편집"
@@ -115,32 +115,32 @@ msgid ""
 "If a non-zero 'NOP interval' is used to periodically 'ping' the initiator "
 "during phases of inactivity (i.e. no data transfers), the initiator must "
 "respond within N seconds, otherwise the connection will be closed."
-msgstr ""
+msgstr "비활동 단계(즉, 데이터 전송이 없는) 동안에 초기자에게 주기적으로 'ping'을 하기 위해 사용되는 'NOP 간격'이 0이 아니라면, 초기자는 N초 이내에 응답을 해야하며 그렇지 못할 경우 연결이 종료됩니다."
 
 msgid ""
 "If enabled, the initiator has to wait for the target to solicit SCSI data "
 "before sending it. Disabling it allows the initiator to send a burst of N "
 "bytes unsolicited right after and/or together with the command. Thus "
 "disabling it may improve performance."
-msgstr ""
+msgstr "활성화할 경우, 초기자는 전송 전에 SCSI 데이터를 요청하는 대상을 기다려야 합니다. 초기자가 불요청된 N 바이트의 버스트를 명령을 보낸 직후에 혹은 함께 보내는 것을 가능하게 하려면 비활성화를 합니다. 따라서 비활성화할 경우 성능이 향상될 수도 있습니다."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's data segment will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "'CRC32C'로 설정할 경우, 초기자는 이에 따라 설정되고, iSCSI PDU의 데이터 세그먼트의 정합성은 CRC32C 체크섬으로 보호됩니다."
 
 msgid ""
 "If set to 'CRC32C' and the initiator is configured accordingly, the "
 "integrity of an iSCSI PDU's header segments will be protected by a CRC32C "
 "checksum."
-msgstr ""
+msgstr "'CRC32C'로 설정할 경우, iSCSI PDU의 헤더 세그먼트의 정합성은 CRC32C 체크섬으로 보호됩니다."
 
 msgid ""
 "If value is non-zero, the initiator will be 'ping'ed during phases of "
 "inactivity (i.e. no data transfers) every N seconds to verify the connection"
 " is still alive."
-msgstr ""
+msgstr "이 값이 0이 아니라면, 초기자는 비활동 단계(즉, 데이터 전송이 없는) 동안에 연결이 유효한지 검증하기 위해 매 N초 마다 ping을 할 것입니다. "
 
 msgid "Immediate data"
 msgstr "즉시 데이터"
@@ -173,19 +173,19 @@ msgid "Max. transmit data segment length"
 msgstr "최대 전송 데이터 세그먼트 길이"
 
 msgid "NOP interval"
-msgstr "NOP 주기"
+msgstr "NOP 간격"
 
 msgid "NOP timeout"
-msgstr "NOP 타임아웃"
+msgstr "NOP 시간 만료"
 
 msgid "None"
 msgstr "없음"
 
 msgid "Only one outgoing user per target is supported."
-msgstr "타겟당 하나의 발신 사용자만 지원됩니다."
+msgstr "대상당 하나의 송신 사용자만 지원됩니다."
 
 msgid "Outgoing"
-msgstr "발신"
+msgstr "송신"
 
 msgid "Password"
 msgstr "암호"
@@ -211,7 +211,7 @@ msgstr "장치를 선택하세요 ..."
 msgid ""
 "Sets the amount of unsolicited data the initiator may transmit in the first "
 "burst of a transfer either with and/or right after the command."
-msgstr ""
+msgstr "초기자의 첫 버스트의 전송에서 명령과 함께 혹은 직후에 전송할 수도 있는 불요청 데이터의 총량을 설정합니다."
 
 msgid ""
 "Sets the maximum amount of either unsolicited or solicited data the "
@@ -239,7 +239,7 @@ msgstr "대상의 최대 세션수"
 msgid ""
 "The number of commands an initiator may send and that will be buffered by "
 "the target."
-msgstr ""
+msgstr "초기자가 보내고 대상에서 버퍼하게 될 명령의 개수"
 
 msgid "The number of connections within a session."
 msgstr "세션 내에서 연결의 수"
