--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-ldap (1.2) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Mar 2015 22:13:58 +0100
+
 openmediavault-ldap (1.1) stable; urgency=low
 
   * Update locales.
