--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/cs_CZ/openmediavault-ldap.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-12-03 09:26+0000\n"
-"Last-Translator: Jan Štourač <wormsik666@gmail.com>\n"
+"PO-Revision-Date: 2015-02-04 16:40+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,25 +20,25 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "Base DN"
-msgstr ""
+msgstr "Základ rozlišeného názvu (DN)"
 
 msgid "Directory Service"
 msgstr "Adresářová služba"
 
 msgid "Enable"
-msgstr "Povolit"
+msgstr "Zapnout"
 
 msgid "Extra options"
-msgstr "Extra parametry"
+msgstr "Další možnosti"
 
 msgid "General settings"
 msgstr "Obecná nastavení"
 
 msgid "Groups suffix"
-msgstr ""
+msgstr "Přípona skupin"
 
 msgid "Host"
-msgstr "Hostitel"
+msgstr "Stroj"
 
 msgid "Password"
 msgstr "Heslo"
@@ -45,10 +46,10 @@ msgstr "Heslo"
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Více podrobností naleznete v <a href='http://linux.die.net/man/5/nss_ldap' target='_blank'>manuálové stránce</a>."
 
 msgid "Root Bind DN"
-msgstr ""
+msgstr "Kořenové spojovací DN"
 
 msgid "Settings"
 msgstr "Nastavení"
@@ -56,27 +57,27 @@ msgstr "Nastavení"
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
 "'dc=example,dc=net'."
-msgstr ""
+msgstr "Určuje základní rozlišený název (DN), sloužící jako základ pro hledání, např. \"dc=example,dc=net\"."
 
 msgid "Specifies the credentials with which to bind."
-msgstr ""
+msgstr "Určuje údaje, sloužící k přihlášení."
 
 msgid ""
 "Specifies the distinguished name (DN) with which to bind to the directory "
 "server for lookups, e.g. 'cn=manager,dc=example,dc=net'."
-msgstr ""
+msgstr "Určuje rozlišené jméno (DN), kterým se spojovat s adresářovým serverem pro vyhledávání, např. cn=manager,dc=example,dc=net."
 
 msgid "Specifies the group suffix, e.g. 'ou=Groups'."
-msgstr ""
+msgstr "Určuje příponu skupiny, např. \"ou=Groups\"."
 
 msgid "Specifies the port to connect to."
-msgstr ""
+msgstr "Určuje port ke kterému se připojit."
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
-msgstr ""
+msgstr "Určuje příponu uživatele, např. \"ou=Users\"."
 
 msgid "The FQDN or IP address of the server."
-msgstr ""
+msgstr "Úplný doménový název (FQDN) či IP adresa serveru."
 
 msgid "Users suffix"
-msgstr ""
+msgstr "Přípona uživatelů"
