--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/cs_CZ/openmediavault-lvm2.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2012-03-17 01:49+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2014-12-30 19:04+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,123 +19,123 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "Add physical volume"
-msgstr ""
+msgstr "Přidat fyzický svazek"
 
 msgid ""
 "After the logical volume has been extended you can resize the containing "
 "filesystem."
-msgstr ""
+msgstr "Poté, co byl logický svazek rozšířen, je možné zvětšit i souborový systém, který nese. "
 
 msgid "Available"
-msgstr ""
+msgstr "K dispozici"
 
 msgid "Capacity"
-msgstr ""
+msgstr "Kapacita"
 
 msgid "Confirmation"
-msgstr ""
+msgstr "Potvrzení"
 
 msgid "Create logical volume"
-msgstr ""
+msgstr "Vytvořit logický svazek"
 
 msgid "Create volume group"
-msgstr ""
+msgstr "Vytvořit skupinu svazků"
 
 msgid "Description"
-msgstr ""
+msgstr "Popis"
 
 msgid "Device"
-msgstr ""
+msgstr "Zařízení"
 
 msgid "Devices"
-msgstr ""
+msgstr "Zařízení"
 
 msgid "Do you really want to create the logical volume?"
-msgstr ""
+msgstr "Opravdu chcete vytvořit logický svazek?"
 
 msgid "Do you really want to create the physical volume?"
-msgstr ""
+msgstr "Opravdu chcete vytvořit fyzický svazek?"
 
 msgid "Do you really want to create the volume group?"
-msgstr ""
+msgstr "Opravdu chcete vytvořit skupinu svazků?"
 
 msgid "Edit logical volume"
-msgstr ""
+msgstr "Upravit logický svazek"
 
 msgid "Edit volume group"
-msgstr ""
+msgstr "Upravit skupinu svazků"
 
 msgid "Extend"
-msgstr ""
+msgstr "Rozšířit"
 
 msgid "Extend logical volume"
-msgstr ""
+msgstr "Rozšířit logický svazek"
 
 msgid "Extend volume group"
-msgstr ""
+msgstr "Rozšířit skupinu svazků"
 
 msgid "Failed to remove logical volume: %s"
-msgstr ""
+msgstr "Logický svazek nelze odebrat: %s"
 
 msgid "Failed to remove physical volume: %s"
-msgstr ""
+msgstr "Nelze odebrat fyzický svazek: %s"
 
 msgid "Failed to remove volume group: %s"
-msgstr ""
+msgstr "Nelze odebrat svazek skupin: %s"
 
 msgid "Free"
-msgstr ""
+msgstr "Volné"
 
 msgid "Invalid name"
-msgstr ""
+msgstr "Neplatný název"
 
 msgid "Logical Volume Management"
-msgstr ""
+msgstr "Správa logických svazků"
 
 msgid "Logical volumes"
-msgstr ""
+msgstr "Logické svazky"
 
 msgid "Name"
-msgstr ""
+msgstr "Název"
 
 msgid "No free space available to create a logical volume."
-msgstr ""
+msgstr "Pro vytvoření logického svazku již nezbývá žádné volné místo."
 
 msgid "No free space available to extend the logical volume."
-msgstr ""
+msgstr "Pro zvětšení logického svazku již nezbývá žádné volné místo."
 
 msgid "No logical volume found on '%s'"
-msgstr ""
+msgstr "Na %s nebyl nalezen žádný logický svazek"
 
 msgid "No physical volume found on '%s'"
-msgstr ""
+msgstr "Na %s nebyl nalezen žádný fyzický svazek"
 
 msgid "Physical volumes"
-msgstr ""
+msgstr "Fyzické svazky"
 
 msgid "Reduce"
-msgstr ""
+msgstr "Zmenšit"
 
 msgid "Reduce volume group"
-msgstr ""
+msgstr "Zmenšit skupinu svazků"
 
 msgid "Select a volume group ..."
-msgstr ""
+msgstr "Vybrat skupinu svazků (vg)..."
 
 msgid "Select an device ..."
-msgstr ""
+msgstr "Vyberte zařízení..."
 
 msgid "Size"
-msgstr ""
+msgstr "Velikost"
 
 msgid "Used"
-msgstr ""
+msgstr "Použito"
 
 msgid "Volume group"
-msgstr ""
+msgstr "Skupina svazků"
 
 msgid "Volume group '%s' not found"
-msgstr ""
+msgstr "Skupina svazků %s nenalezena"
 
 msgid "Volume groups"
-msgstr ""
+msgstr "Skupiny svazků"
