--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Alexander Savchenko, 2014
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
 # артур Мудрых <arturmon82@gmail.com>, 2012
@@ -11,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-05-19 17:18+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-03-04 20:19+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,13 +78,13 @@ msgid "Extend volume group"
 msgstr "Увеличить группу томов"
 
 msgid "Failed to remove logical volume: %s"
-msgstr ""
+msgstr "Не удалось удалить логический том: %s"
 
 msgid "Failed to remove physical volume: %s"
-msgstr ""
+msgstr "Не удалось удалить физический том: %s"
 
 msgid "Failed to remove volume group: %s"
-msgstr ""
+msgstr "Не удалось удалить группу томов: %s"
 
 msgid "Free"
 msgstr "Свободно"
@@ -107,10 +108,10 @@ msgid "No free space available to extend the logical volume."
 msgstr "Нет свободного места, чтобы расширить логический том."
 
 msgid "No logical volume found on '%s'"
-msgstr ""
+msgstr "Не найден логический том '%s'"
 
 msgid "No physical volume found on '%s'"
-msgstr ""
+msgstr "Не найден физический том '%s'"
 
 msgid "Physical volumes"
 msgstr "Физические тома"
@@ -137,7 +138,7 @@ msgid "Volume group"
 msgstr "Группа томов"
 
 msgid "Volume group '%s' not found"
-msgstr ""
+msgstr "Группа томов '%s' не найдена"
 
 msgid "Volume groups"
 msgstr "Группы томов"
