--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ko_KR/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ko_KR/openmediavault-netatalk.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-06 16:30+0200\n"
-"PO-Revision-Date: 2014-11-02 10:04+0000\n"
-"Last-Translator: Chang-Eon Byeon <ksna0827@gmail.com>\n"
+"PO-Revision-Date: 2015-02-08 11:49+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +32,7 @@ msgid "Allow guests to create or modify files."
 msgstr "게스트가 파일을 생성 또는 수정하도록 허용"
 
 msgid "Allow logins with passwords transmitted in the clear."
-msgstr ""
+msgstr "일반 텍스트로 전송된 암호의 로그인을 허용합니다."
 
 msgid "Allow plain passwords"
 msgstr "평문 암호 허용"
@@ -40,19 +41,19 @@ msgid "Apple Filing"
 msgstr "애플 파일링"
 
 msgid "Case folding"
-msgstr ""
+msgstr "대소문자 처리"
 
 msgid "Client sees lowercase, server sees uppercase"
-msgstr ""
+msgstr "클라이언트는 소문자로, 서버는 대문자로 보여집니다."
 
 msgid "Client sees uppercase, server sees lowercase"
-msgstr ""
+msgstr "클라이언트는 대문자로, 서버는 소문자로 보여집니다."
 
 msgid "Comment"
 msgstr "설명"
 
 msgid "Don't do :hex translation for dot files."
-msgstr ""
+msgstr "숨김 파일들에 대해 :hex 변환을 하지 않습니다."
 
 msgid "Edit share"
 msgstr "공유 편집"
@@ -85,37 +86,37 @@ msgid "Guests only have read access by default."
 msgstr "기본적으로 게스트는 읽기 권한만을 가집니다."
 
 msgid "Hide dot files"
-msgstr "점(.) 파일 숨기기"
+msgstr "온점으로 이름이 시작되는 파일 숨기기"
 
 msgid "Home directories"
 msgstr "홈 경로"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
-msgstr ""
+msgstr "활성화할 경우, 공유에 접근하기 위해서 암호가 필요합니다."
 
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr ""
+msgstr "활성화할 경우, 사용자들이 공유 내에서 파일을 생성하거나 수정할 수 없게 될 수도 있습니다."
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
 " from using the whole disk space for backup. Set this value to 0 to disable "
 "this option."
-msgstr ""
+msgstr "주어진 MiB 값으로 보고 볼륨 크기를 제한합니다. 따라서 타임머신이 백업을 위해 모든 디스크 공간이 사용하는 것을 방지합니다. 이를 비활성화하려면 값을 0으로 설정합니다."
 
 msgid "Lowercases names in both directions"
-msgstr ""
+msgstr "양쪽 모두에서 소문자 이름을 사용합니다."
 
 msgid "Make dot files invisible."
-msgstr ""
+msgstr "이름이 온점으로 시작하는 파일을 숨깁니다."
 
 msgid "Name"
 msgstr "이름"
 
 msgid "None"
-msgstr ""
+msgstr "없음"
 
 msgid "Password"
 msgstr "암호"
@@ -146,10 +147,10 @@ msgstr "공유 이름"
 
 msgid ""
 "This forces filenames to be restricted to the character set used by Windows."
-msgstr ""
+msgstr "파일 이름을 윈도우즈에서 사용되는 문자 집합으로 제한합니다. "
 
 msgid "This option handles, if the case of filenames should be changed."
-msgstr ""
+msgstr "이 옵션은 파일 이름이 바뀌어야 하는 상황을 다룹니다."
 
 msgid "Time Machine support"
 msgstr "타임 머신 지원"
@@ -158,18 +159,18 @@ msgid "Unix privileges"
 msgstr "UNIX 권한"
 
 msgid "Uppercases names in both directions"
-msgstr ""
+msgstr "양쪽 모두에서 대문자 이름을 사용합니다."
 
 msgid "Use AFP3 unix privileges."
 msgstr "AFP3 UNIX 권한 사용"
 
 msgid "Use dots"
-msgstr "점(.) 사용"
+msgstr "온점을 사용"
 
 msgid ""
 "When this option gets set, certain file names become illegal. These are "
 ".Parent and anything that starts with .Apple."
-msgstr ""
+msgstr "이 옵션이 설정될 때 .Parent나 .Apple로 시작되는 일부 파일 이름은 유효하지 않게 됩니다."
 
 msgid "n/a"
 msgstr "해당 없음"
