--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ru_RU/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ru_RU/openmediavault-netatalk.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # Alexander Savchenko, 2013
+# Alexander Savchenko, 2013
 # mictian <ffrants@gmail.com>, 2012
 # артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
@@ -11,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-06 16:30+0200\n"
-"PO-Revision-Date: 2014-08-06 14:30+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-03-04 20:14+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
