--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/ko_KR/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/ko_KR/openmediavault-nut.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-11-01 19:24+0000\n"
-"Last-Translator: Chang-Eon Byeon <ksna0827@gmail.com>\n"
+"PO-Revision-Date: 2015-02-08 10:12+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +29,7 @@ msgid "Date & Time"
 msgstr "날짜 및 시간"
 
 msgid "Defines when the shutdown is initiated."
-msgstr ""
+msgstr "종료 초기 상태일 때를 정의합니다."
 
 msgid "Driver configuration directives"
 msgstr "드라이버 설정 지시어"
@@ -84,22 +85,22 @@ msgstr "시스템에서 사용자의 UPS를 식별하는데 고유 이름이 사
 msgid ""
 "The time in seconds until shutdown is initiated. If the UPS happens to come "
 "back before the time is up the shutdown is canceled."
-msgstr ""
+msgstr "종료가 초기화될 때까지의 시간을 초단위로 나타냅니다. 만약 UPS가 여기에 지정된 시간 안에 복구된다면 종료는 취소됩니다."
 
 msgid ""
 "To get more information how to configure your UPS please check the Network "
 "UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' "
 "target='_blank'>documentation</a>."
-msgstr ""
+msgstr "어떻게 UPS를 설정할 것인지에 대해 더 많은 정보가 필요하다면 Network UPS Tool <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>공식 문서</a>를 참고하세요."
 
 msgid "UPS"
 msgstr "UPS"
 
 msgid "UPS goes on battery"
-msgstr ""
+msgstr "UPS 배터리가 동작 중입니다."
 
 msgid "UPS reaches low battery"
-msgstr ""
+msgstr "UPS의 배터리가 얼마남지 않았습니다."
 
 msgid "Used for remote authentication."
 msgstr "원격 인증에 사용됨"
