--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-06-05 12:21+0000\n"
+"PO-Revision-Date: 2015-03-04 20:16+0000\n"
 "Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
@@ -51,16 +51,16 @@ msgid "Load"
 msgstr "Загрузка"
 
 msgid "Message"
-msgstr "Сообщение"
+msgstr "сообщение"
 
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 msgid "Password"
 msgstr "Пароль"
 
 msgid "Program"
-msgstr ""
+msgstr "Программа"
 
 msgid "Remote monitoring"
 msgstr "Удаленный мониторинг"
