--- a/deb/openmediavault-owncloud/debian/changelog
+++ b/deb/openmediavault-owncloud/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-owncloud (1.4) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 16 Mar 2015 22:16:12 +0100
+
 openmediavault-owncloud (1.3) stable; urgency=low
 
   * Update locales.
