--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/cs_CZ/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/cs_CZ/openmediavault-owncloud.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-07-07 18:17+0200\n"
-"PO-Revision-Date: 2014-11-29 19:33+0000\n"
-"Last-Translator: Jan Štourač <wormsik666@gmail.com>\n"
+"PO-Revision-Date: 2015-02-04 16:40+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +35,7 @@ msgid "Edit share"
 msgstr "Upravit sdílení"
 
 msgid "Enable"
-msgstr "Povolit"
+msgstr "Zapnout"
 
 msgid "Folder name"
 msgstr "Název složky"
@@ -61,7 +62,7 @@ msgid "The location of the files to share."
 msgstr "Umístění souborů ke sdílení."
 
 msgid "The location where ownCloud stores its files."
-msgstr "Umístění, kde ownCloud ukládá své soubory."
+msgstr "Umístění, kam ownCloud ukládá své soubory."
 
 msgid "The name of the share."
 msgstr "Název sdílení."
@@ -69,13 +70,13 @@ msgstr "Název sdílení."
 msgid ""
 "The ownCloud web interface can be accessed <a href='/owncloud' "
 "target='_blank'>here</a>."
-msgstr "K webovému rozhraní ownCloud lze přistoupit <a href='/owncloud' target='_blank'>zde</a>."
+msgstr "Webové rozhraní služby ownCloud je dostupné <a href='/owncloud' target='_blank'>zde</a>."
 
 msgid "The port '%d' is already in use"
-msgstr "Port \"%d\" je již používán"
+msgstr "Port %d je již používán"
 
 msgid "The port which is used to access the ownCloud web interface."
-msgstr "Port na kterém bude dostupné webové rozhraní ownCloud."
+msgstr "Port na kterém bude dostupné webové rozhraní služby ownCloud."
 
 msgid "n/a"
 msgstr "n/a"
