--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl_ES/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl_ES/openmediavault-owncloud.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014
+# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-07-07 18:17+0200\n"
-"PO-Revision-Date: 2014-07-07 16:18+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-02-26 08:16+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/openmediavault/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -69,7 +69,7 @@ msgstr "O nome do recurso compartido"
 msgid ""
 "The ownCloud web interface can be accessed <a href='/owncloud' "
 "target='_blank'>here</a>."
-msgstr ""
+msgstr "Pode acceder a interface web do ownCloud desde <a href='/owncloud' target='_blank'>aquí</a>"
 
 msgid "The port '%d' is already in use"
 msgstr "O porto «%d» xa esta a ser usado"
