--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/ru_RU/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/ru_RU/openmediavault-owncloud.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Alexander Savchenko, 2014
+# Alexander Savchenko, 2014
 # артур Мудрых <arturmon82@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-07-07 18:17+0200\n"
-"PO-Revision-Date: 2014-07-07 16:18+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-03-04 20:18+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,13 +71,13 @@ msgstr "Имя общего ресурса."
 msgid ""
 "The ownCloud web interface can be accessed <a href='/owncloud' "
 "target='_blank'>here</a>."
-msgstr ""
+msgstr "Получить доступ к веб интерфейсу можно <a href='/owncloud' target='_blank'>here</a>."
 
 msgid "The port '%d' is already in use"
 msgstr "Порт '%d' уже используется"
 
 msgid "The port which is used to access the ownCloud web interface."
-msgstr ""
+msgstr "Порт, который используется для доступа к веб-интерфейсу OwnCloud."
 
 msgid "n/a"
 msgstr "н / д"
