--- a/deb/openmediavault-route/usr/share/openmediavault/locale/cs_CZ/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/cs_CZ/openmediavault-route.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Jan Štourač <wormsik666@gmail.com>, 2014
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-12-03 09:40+0000\n"
-"Last-Translator: Jan Štourač <wormsik666@gmail.com>\n"
+"PO-Revision-Date: 2014-12-30 09:38+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,16 +20,16 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "A route with the network already exists"
-msgstr "Cesta s danou sítí již existuje"
+msgstr "Směrování s danou sítí již existuje"
 
 msgid "Add static route"
-msgstr "Přidat statickou cestu"
+msgstr "Přidat statické směrování"
 
 msgid "Comment"
 msgstr "Komentář"
 
 msgid "Edit static route"
-msgstr "Upravit statickou cestu"
+msgstr "Upravit statické směrování"
 
 msgid "Gateway"
 msgstr "Brána"
