--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/gl_ES/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/gl_ES/openmediavault-usbbackup.po
@@ -5,14 +5,14 @@
 # Translators:
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013
-# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014
+# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-25 22:54+0200\n"
-"PO-Revision-Date: 2014-08-25 20:54+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-02-26 08:13+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/openmediavault/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -108,7 +108,7 @@ msgid ""
 "Please note that the web interface is blocked until the manually started "
 "backup job has been finished. However the backup job is automatically "
 "executed in the background when the storage device is connected to the host."
-msgstr ""
+msgstr "Teña en conta que, cando se inicia manualmente a tarefa de copia de seguranza, a interface web bloquease ata que a tarefa teña rematado. Porén, cando o dispositivo está conectado ao servidor, a tarefa de copia de seguranza executase automaticamente en segundo plano."
 
 msgid "Preserve ACLs"
 msgstr "Conservar os ACL"
