--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Alexander Savchenko, 2014
 # артур Мудрых <arturmon82@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-25 22:54+0200\n"
-"PO-Revision-Date: 2014-08-25 20:54+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-03-04 20:16+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +81,7 @@ msgid "Failed to get filesystems"
 msgstr "Не удалось получить файловые системы"
 
 msgid "Failed to get storage device file from '%s'"
-msgstr ""
+msgstr "Ошибка получения файла устройства хранения из '%s'"
 
 msgid "Filesystem '%s' not found"
 msgstr "Файловая система '%s' не найден"
@@ -164,7 +165,7 @@ msgid ""
 "The shared folder content is synchronised from/to the root of the external "
 "storage device if this option is not set. The name of the directory is taken"
 " from the shared folder."
-msgstr ""
+msgstr "Если эта опция не установлена, содержимое общей папки синхронизируются с/в корень внешнего запоминающего устройства​​.Имя каталога берется из общей папки."
 
 msgid ""
 "The shared folder to synchronise when the external storage device is "
