Modify Javascript code to fix EXTJS-13864, see http://www.sencha.com/forum/showthread.php?286026-4.2.2-Form-field-height-incorrect-with-afterSubTpl-flex-and-layout-vbox&p=1046055&viewfull=1#post1046055.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (2.0.3) stable; urgency=low
 
-  *
+  * Modify Javascript code to fix EXTJS-13864.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 17 Mar 2015 09:08:29 +0100
 
