Mantis 0001289: Interfaces can't be edited on OpenVZ.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -26,6 +26,7 @@ openmediavault (2.0) stable; urgency=low
 openmediavault (1.17) stable; urgency=low
 
   * Mantis 0001286: Unable to mount ReiserFS disk.
+  * Mantis 0001289: Interfaces can't be edited on OpenVZ.
   * Mantis 0001290: Log authenticated und unauthenticated WebGUI logins
     to LOG_AUTH.
 
